--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,23 @@
         <maven.compiler.target>1.8</maven.compiler.target> <!-- Use Java 8 -->
     </properties>
 
+    <!-- Distribution Management -->
+    <distributionManagement>
+        <!-- Release Repository -->
+        <repository>
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://3.94.180.252:8081/repository/maven-releases/</url>
+        </repository>
+
+        <!-- Snapshot Repository -->
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://3.94.180.252:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <!-- Dependencies -->
     <dependencies>
         <!-- Spring Boot Dependencies -->
