--- a/pom.xml
+++ b/pom.xml
@@ -1,66 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <!-- Project coordinates -->
-    <groupId>com.mybank</groupId>
-    <artifactId>bank-application</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <name>Bank Application</name>
-    <description>Simple Java-based Bank Application</description>
-
-    <packaging>jar</packaging>
-
-    <!-- Properties -->
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source> <!-- Use Java 8 -->
-        <maven.compiler.target>1.8</maven.compiler.target> <!-- Use Java 8 -->
-    </properties>
-
-    <!-- Distribution Management -->
-    <distributionManagement>
-        <!-- Release Repository -->
-        <repository>
-            <id>nexus-releases</id>
-            <name>Nexus Release Repository</name>
-            <url>http://3.94.180.252:8081/repository/maven-releases/</url>
-        </repository>
-
-        <!-- Snapshot Repository -->
-        <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <name>Nexus Snapshot Repository</name>
-            <url>http://3.94.180.252:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <!-- Dependencies -->
-    <dependencies>
-        <!-- Spring Boot Dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <!-- Spring Boot Maven Plugin for building the executable JAR -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>${spring.boot.version}</version> <!-- Specify the version -->
         </dependency>
     </dependencies>
 
     <!-- Build Section -->
     <build>
         <plugins>
-            <!-- Plugin to run Java directly -->
+            <!-- Spring Boot Maven Plugin for creating executable JAR -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.0</version>
+                <configuration>
+                    <mainClass>com.mybank.BankApplication</mainClass>
+                </configuration>
+            </plugin>
+
+            <!-- Plugin to compile Java code -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -70,21 +29,9 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
-            <!-- Plugin for creating executable JAR file -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.mybank.BankApplication</mainClass> <!-- Main class for Spring Boot -->
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
 </project>
+
+                                                                                                                     82,0-1        Bot
